force-app/main/default/objects/RouteQuotesH__c/RouteQuotesH__c.object-meta.xml
<CustomObject>
    <label>Route Quotas Hierarchy</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Route Quotas Hierarchy</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>