force-app/main/default/objects/RouteQuotesH__c/fields/Budget_pcs__c.field-meta.xml
<CustomField>
    <fullName>Budget_pcs__c</fullName>
    <label>Budget (pcs)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>