force-app/main/default/objects/RouteQuotesH__c/fields/DateEnd__c.field-meta.xml
<CustomField>
    <fullName>DateEnd__c</fullName>
    <label>DateEnd</label>
    <type>Date</type>
</CustomField>