force-app/main/default/objects/RouteQuotesH__c/fields/ItemId__c.field-meta.xml
<CustomField>
    <fullName>ItemId__c</fullName>
    <label>Item Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>