force-app/main/default/objects/RouteQuotesH__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>RouteQuotesH__c</referenceTo>
    <relationshipName>Route_Quotes_Hierarchy</relationshipName>
    <type>Lookup</type>
</CustomField>