force-app/main/default/objects/RouteQuotesH__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <label>Parent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>