force-app/main/default/objects/RouteQuotesH__c/fields/Quote_t__c.field-meta.xml
<CustomField>
    <fullName>Quote_t__c</fullName>
    <label>Quote (t)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>