force-app/main/default/objects/RouteQuotesH__c/fields/RouteQuote__c.field-meta.xml
<CustomField>
    <fullName>RouteQuote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RouteQuote</label>
    <referenceTo>Route_Quota__c</referenceTo>
    <relationshipName>Route_Quotes_Hierarchy</relationshipName>
    <type>Lookup</type>
</CustomField>