force-app/main/default/objects/RouteQuotesH__c/fields/Shop_Name__c.field-meta.xml
<CustomField>
    <fullName>Shop_Name__c</fullName>
    <label>Shop Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>