force-app/main/default/objects/RouteQuotesH__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Budget_pcs__c</columns>
    <columns>Budget_t__c</columns>
    <columns>DateBegin__c</columns>
    <columns>DateEnd__c</columns>
    <columns>Quote_t__c</columns>
    <columns>Quote_pcs__c</columns>
    <columns>Level__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>